--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "group-css-media-queries-loader": "^4.3.0",
